--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,6 +3,6 @@ platform :ios, '10.0'
 
 use_frameworks!
 target 'AlertExample' do
-    pod 'Alert', :path => '../'
+    pod 'Alerty', :path => '../'
 end
 
